--- a/src/app/ngx-bang/ngx-bang.component.less
+++ b/src/app/ngx-bang/ngx-bang.component.less
@@ -1,3 +1,4 @@
+@import "./reset.less";
 @import "./components.less";
 
 @component-background   : #fff;
@@ -15,3 +16,9 @@
 @border-width-base      : 1px;            // width of the border for a component
 @border-style-base      : solid;          // style of a components border
 @border                 : @border-width-base @border-style-base @border-color-base;
+
+// flex
+.flex-align-center {
+    display: flex;
+    align-items: center;
+}
