--- a/src/styles.less
+++ b/src/styles.less
@@ -1,2 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./app/ngx-bang/ngx-bang.component.less";
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '@swimlane/ngx-dnd/release/index.css';
