--- a/src/app/ngx-bang/custom-colum/custom-colum.component.less
+++ b/src/app/ngx-bang/custom-colum/custom-colum.component.less
@@ -7,6 +7,9 @@
     }
     .columns-modal-container-left {
         flex-grow: 1;
+        .mat-expansion-panel {
+            background-color: #fcfcfc;
+        }
         .colums-list-box {
             margin-left: -4px;
             display: flex;
@@ -28,7 +31,7 @@
                 font-size: 12px;
             }
             .high-light {
-                background-color: #dbedff;
+                background-color: rgba(211, 233, 255, 0.8);
             }
         }
     }
